<resources>
    <string name="app_name">Sri Lanka Traffic Police</string>
    <string name="login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="sendSms">Send SMS</string>
    <!--offences-->

    <string name="Section140">Non-compliance with Speed limits provisions</string>
    <string name="Section158">Failure to wear protective helmets when driving</string>
    <string name="Section190">Violation of regulations</string>
    <string name="Section164">Non-compliance with traffic signs</string>
    <string name="Section157A">Non-use of seat belts</string>
    <string name="Section153">Using inappropiate signals when driving and C.</string>
    <string name="Section148">Failure to comply with road rules</string>
    <string name="Section130">Failure to have a License to drive a specific class of vehicles</string>
    <string name="Section152">Unobstructed control of vehicle when driving</string>
    <string name="Section155A">Excessive emission of smoke and C.</string>
    <string name="Section135">Failure to carry a driving licence when driving</string>
    <string name="Section160">Prohibit excessive use of noise from a vehicle</string>
    <string name="Section159">Prohibition to distribute advertisements from a vehicle in motion</string>
    <string name="Section162">Failure to obey directions and signals of police officers</string>
    <string name="Section166">Not halting or parking of motor vehicles on road</string>

    <!--driverDetails-->
    <string name="DriverName">Name :</string>
    <string name="DriverAddress">Address :</string>
    <!--<string name="DriverDateOfBirth">DOB</string>-->
    <string name="DriverDateOfIssue">Issued :</string>
    <string name="DriverDateOfExpire">Expire :</string>
    <string name="DriverCatogeriesOfVehicles">Categories :</string>
    <string name="DriverLicenseNo">License :</string>

    <!--fining-->
    <string name="offenceslist">Offences</string>

</resources>
